<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/name_album"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/name_album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/name_album"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/actor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/artist_song"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_album"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/name_actor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/artist_song"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@id/actor"
            app:layout_constraintTop_toBottomOf="@id/name_album"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/published"
            android:layout_marginTop="@dimen/common_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_actor"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/genre"
            android:layout_marginTop="@dimen/common_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toEndOf="@id/album"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/last"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_last_24"
            app:layout_constraintTop_toBottomOf="@id/name_actor"
            app:layout_constraintEnd_toStartOf="@+id/play"
            android:layout_marginBottom="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:icon="@drawable/ic_play_pause_circle_24"
            app:layout_constraintTop_toBottomOf="@id/name_actor"
            app:layout_constraintEnd_toStartOf="@+id/stop"
            android:layout_marginBottom="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_next_24"
            app:layout_constraintTop_toBottomOf="@id/name_actor"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stop"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_stop_circle_24"
            app:layout_constraintTop_toBottomOf="@id/name_actor"
            app:layout_constraintEnd_toStartOf="@+id/next"
            android:layout_marginBottom="24dp" />

        <SeekBar
            android:id="@+id/positionBar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf= "@id/published"
            app:layout_constraintTop_toBottomOf = "@id/published"
            />

        <TextView
            android:id="@+id/timeStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/start_time"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/positionBar"
            app:layout_constraintVertical_chainStyle="packed" />
        <TextView
            android:id="@+id/overStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:text="@string/over_time"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@id/positionBar"
            app:layout_constraintTop_toBottomOf="@id/positionBar"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="timeStart" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="185dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:listitem="@layout/composition_card" />


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.coordinatorlayout.widget.CoordinatorLayout>